testsuite/tests/parse-errors/singleton_labeled_tuple_type.compilers.reference
<<<<<<< oxcaml
File "singleton_labeled_tuple_type.ml", line 8, characters 26-27:
8 | let foo (just_x : (x : int)) = just_x
||||||| upstream-base
=======
File "singleton_labeled_tuple_type.ml", line 7, characters 26-27:
7 | let foo (just_x : (x : int)) = just_x
>>>>>>> upstream-incoming
                              ^
Error: Syntax error
